Added support for setting environment variables for functions to consume.
Improved security of function container recycling
